포트폴리오 화면 완성

--- a/info/templates/info.html
+++ b/info/templates/info.html
@@ -20,6 +20,14 @@
         border: 1.5px solid gray;
         border-radius: 30px;
         margin-right: 0.5rem;
+        background: url("https://farm1.staticflickr.com/379/19928272501_4ef877c265_t.jpg")
+          no-repeat 95% 50%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+      }
+      select::-ms-expand {
+        display: none;
       }
       select:focus {
         outline: none;
