base.html css 수정

--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -43,10 +43,11 @@
       }
       .header_user a {
         color: rgb(100, 100, 100);
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         margin-left: 1vw;
       }
       .header_user p {
+        font-size: 1.1rem;
         color: rgb(72, 101, 173);
         display: inline-block;
       }
@@ -83,7 +84,7 @@
       </span>
       <span class="header_user">
         {% if user.is_authenticated %}
-        <p>{ user.username }}님</p>
+        <p>{{ user.username }}님</p>
         <a href="javascript:{document.getElementById('logout').submit()}"
           >로그아웃</a
         >
