--- a/qna/templates/qna.html
+++ b/qna/templates/qna.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <style>
       .qnaPage {
         text-align: center;
@@ -64,10 +68,18 @@
         <a class="nav-link" href="{% url 'postcreate' %}">질문하러가기</a>
         </li>
 
+        <br>
         {% for qna in qnas.all %}
-            <h1>제목 : {{ qna.title }}</h1>
-            <p>날짜 : {{ qna.pub_date }}</p>
-            <p>본문 : {{ qna.body }}</p><a href="{% url 'detail' qna.id %}">자세히 보기</a>
+        <div class="container">
+          <div class="card">
+            <div class="card-body">
+            <h1>{{ qna.title }}</h1>
+            <p>{{ qna.pub_date }}</p>
+            <p>{{ qna.body }}</p><a href="{% url 'detail' qna.id %}">자세히 보기</a>
+          </div>
+        </div>
+        </div>
+        <br>
         {% endfor %}
 
     </div>
