원아 team을 create, detail,home, new앞에 붙이다

--- a/teamapp/templates/team_create.html
+++ b/teamapp/templates/team_create.html
@@ -4,7 +4,7 @@
 
 <br>
 <div class="container">
-	<form action="{% url 'postcreate' %}" enctype="multipart/form-data" method="POST">
+	<form action="{% url 'team_postcreate' %}" enctype="multipart/form-data" method="POST">
       {% csrf_token %}
 	  <h4>제목: </h4>
 	  <input type="text" name="title">
@@ -19,7 +19,7 @@
       <br>
       <br>
 	  <input class="btn btn-dark" type="submit" value="글쓰기">
-      <a href="{% url 'home' %}">이전으로 돌아가기</a>
+      <a href="{% url 'team_home' %}">이전으로 돌아가기</a>
 
   </form>
 </div>
