--- a/teamapp/templates/team_detail.html
+++ b/teamapp/templates/team_detail.html
@@ -15,7 +15,7 @@
             {% endif %}
             <br>
             <br>
-        <a href="{% url 'home' %}">이전으로 돌아가기</a>
+        <a href="{% url 'team_home' %}">이전으로 돌아가기</a>
        </div>
     </div>
 </div>
