--- a/teamapp/templates/team_home.html
+++ b/teamapp/templates/team_home.html
@@ -8,7 +8,7 @@
         <div class="card-body">
         <h1> 제목 : {{ team.title }}</h1>
         <p> 작성일자 : {{ team.pub_date| date:"Y-m-d" }}</p>
-        <p> 구인글 미리보기 : {{ team.summary }}<a href = "{%url 'detail' team.id%}">...more</a></p>
+        <p> 구인글 미리보기 : {{ team.summary }}<a href = "{%url 'team_detail' team.id%}">...more</a></p>
         </div>
     </div>
     </div>
