--- a/teamapp/templates/team_new.html
+++ b/teamapp/templates/team_new.html
@@ -1,6 +1,6 @@
 <h1>새 글 쓰기</h1>
 
-<form action="{% url 'create' %}">
+<form action="{% url 'team_create' %}">
     <h4>제목: </h4>
     <input type="text" name ="title">
     <br><br>
