project, activity create 기능

--- a/user/templates/myPage.html
+++ b/user/templates/myPage.html
@@ -16,7 +16,9 @@
     </style>
   </head>
   <body>
-    <div class="myPage"></div>
+    <div class="myPage">
+      <a href="{% url 'portfolio' %}"><p>내 포트폴리오</p></a>
+    </div>
   </body>
 </html>
 {% endblock %}
