포트폴리오 css 수정

--- a/user/templates/project_edit.html
+++ b/user/templates/project_edit.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <style>
-      .project_new {
+      .project_edit {
         margin-top: 5rem;
         min-height: 100vh;
         font-size: 1.2rem;
