--- a/user/templates/activity_edit.html
+++ b/user/templates/activity_edit.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <style>
-      .activity_new {
+      .activity_edit {
         margin-top: 5rem;
         min-height: 100vh;
         font-size: 1.2rem;
@@ -50,7 +50,7 @@
     </style>
   </head>
   <body>
-    <div class="activity_new">
+    <div class="activity_edit">
       <div class="write">
         <form method="POST">
           {% csrf_token %}
