--- a/user/templates/myPage.html
+++ b/user/templates/myPage.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="myPage">
-      <a href="{% url 'portfolio' %}"><p>내 포트폴리오</p></a>
+      <a href="{% url 'portfolio' user.id %}"><p>내 포트폴리오</p></a>
     </div>
   </body>
 </html>
