--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -81,7 +81,7 @@
       <a href=""><h1>R❄adMap</h1></a>
       <span class="header_menu">
         <a href="{% url 'info' %}">정보확인</a>
-        <a href="">팀원모집</a>
+        <a href="{% url 'human' %}">팀원모집</a>
         <a href="{% url 'cal' %}">일정관리</a>
         <a href="{% url 'qna' %}">Q&A</a>
       </span>
