--- a/human/templates/human.html
+++ b/human/templates/human.html
@@ -1,8 +1,11 @@
 
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
+<a href="{% url 'dwrite' %}"> 구인하러가기</a>
 <!DOCTYPE html>
 <html>
   <head>
+      
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -53,7 +56,7 @@
     </style>
   </head>
   <body>
-
+        
         <br>
         {% for human in humans.all %}
         <div class="container">
@@ -67,9 +70,11 @@
         </div>
         <br>
         {% endfor %}
-
+      
     </div>
 
   </body>
+  
 </html>
+         
 {% endblock %}
