--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -95,7 +95,7 @@
           {% csrf_token %} <input type="hidden" />
         </form>
         {% else %}
-        <a href="{% url 'login' %}">로그인</a>
+        <a href="{}">로그인</a>
         <a href="{% url 'signup' %}">회원가입</a>
         {% endif %}
       </span>
