덕분에 글쓰기까지 되었습니다.

--- a/human/templates/dwrite.html
+++ b/human/templates/dwrite.html
@@ -57,7 +57,7 @@
    
     <br>
     <div class="container">
-        <form action="">
+        <form action="{% url 'dpostcreate' %}">
           <h4>제목: </h4>
           <input type="text" name="title">
           <br>
@@ -69,8 +69,7 @@
           <input class="btn btn-dark" type="submit" value="글쓰기">
       </form>
     </div>
-    
-    {% endblock %}
+ 
     </div>
 
   </body>
