--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -59,6 +59,7 @@
 <p>{{ human.body }}</p> 
 
 <a href="{% url 'human' %}">돌아가기</a>
+<a href="{% url 'dpostupdate' human.id %}"> 수정하러가기</a>
 
 
   </body>
