--- a/qna/templates/detail.html
+++ b/qna/templates/detail.html
@@ -1,13 +1,32 @@
-{% extends 'base.html' %}
-{% block content %}
-
-<h1>자세한 본문 내용</h1>
-<br>
-<h1>제목: {{qna.title}}</h1>
-<p>작성 날짜 : {{qna.pub_date}}</p>
-<p>자세한 본문 내용 : {{qna.body}}}</p>
-<a href="{% url 'postupdate' qna.id %}">수정하기</a>
-<br>
-<a href="{% url 'postdelete' qna.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">삭제하기</a>
-
+{% extends 'base.html' %} {% block content %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      .detailPage {
+        text-align: center;
+        min-height: 100vh;
+      }
+      .detailPage h1 {
+        font-size: 2.3rem;
+        color: rgb(72, 101, 173);
+        line-height: 4rem;
+        letter-spacing: 0.2rem;
+      }
+      
+    </style>
+  </head>
+  <body>
+    <div class="detailPage">
+        <h1>자세한 본문 내용</h1>
+        <br>
+        <h2>제목: {{qna.title}}</h2>
+        <p>작성 날짜 : {{qna.pub_date}}</p>
+        <p>자세한 본문 내용 : {{qna.body}}}</p>
+        <a href="{% url 'postupdate' qna.id %}">수정하기</a>
+        <br>
+        <a href="{% url 'postdelete' qna.id %}" onclick="return confirm('정말 삭제하시겠습니까?')">삭제하기</a>
+    </div>
+  </body>
+</html>
 {% endblock %}
