calendar 틀 구현 + 일정 추가 기능 (footer고정이 안되넹..)

--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -82,7 +82,7 @@
       <span class="header_menu">
         <a href="{% url 'info' %}">정보확인</a>
         <a href="">팀원모집</a>
-        <a href="{% url 'cal' %}">일정관리</a>
+        <a href="{% url 'calendar' %}">일정관리</a>
         <a href="{% url 'qna' %}">Q&A</a>
       </span>
       <span class="header_user">
