일정관리 css 수정

--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -110,7 +110,8 @@
       </div>
       <hr />
     </div>
-    {% block content %} {% endblock %}
+    {% block content %}
+    {% endblock %}
     <div class="footer">
       <span>&copy;2021 LikeLion 9기 눈덩이</span>
       <span>김유진, 노은성, 오예림, 조원아</span>
