--- a/cal/templates/cal.html
+++ b/cal/templates/cal.html
@@ -2,148 +2,136 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <style>
-    .calPage {
-      text-align: center;
-      min-height: 100vh;
-    }
+  <head>
+    <style>
+      .calPage {
+        text-align: center;
+        min-height: 100vh;
+      }
+      .calPage h1 {
+        font-size: 2.3rem;
+        color: rgb(72, 101, 173);
+        line-height: 4rem;
+        letter-spacing: 0.2rem;
+      }
 
-    .calPage h1 {
-      font-size: 2.3rem;
-      color: rgb(72, 101, 173);
-      line-height: 4rem;
-      letter-spacing: 0.2rem;
-    }
+      .nav_item {
+        font-size: 1.2rem;
+        margin: 2rem;
+      }
 
-    @font-face {
-      font-family: 'BMHANNAPro';
-      src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
-      font-weight: normal;
-      font-style: normal;
-    }
+      @font-face {
+        font-family: 'BMHANNAPro';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+      }
+      .calendar {
+        width: 70vw;
+        font-size: 1rem;
+        margin: auto;
+        background: #fff;
+        border-radius: 1em;
+        -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff;
+        box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff;
+        color: #555;
+        text-align: center;
+      }
+      .month {
+        font-size: 1rem;
+      }
+      .date {
+        font-size: 1rem;
+      }
+      .calendar .month {
+        color: #222222;
+        font-weight: 800;
+      }
+      .calendar th {
+        padding: 2vw;
+        text-align: center;
+        font-size: 1.5rem;
+      }
+      .calendar tr {
+        color: #e66b6b;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+      .calendar td {
+        width: 1rem;
+        height: 5em;
+        padding: .25em .25em;
+        transition: background .5s;
+      }
+      .calendar td:hover {
+        background: #cacaca;
+        color: #fff;
+      }
 
-    .calendar {
-      width: 70vw;
-      font-size: 1rem;
-      margin: auto;
-      background: #fff;
-      border-radius: 0 0 1em 1em;
-      -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff;
-      box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2), 10px 10px 10px 10px #fff;
-      color: #555;
-      text-align: center;
-      min-height: 100vh;
-    }
+      .event_line {
+        height: 100%;
+        padding: 0;
+        list-style: none;
+        margin: 0;
+      }
 
-    .month {
-      font-size: 1rem;
-    }
+      .calPage a {
+        transition: color .2s;
+      }
+      span {
+        color: black;
+      }
+      .calPage a:link {
+        color: blue;
+        text-decoration: none;
+      }
+      .calPage a:visited {
+        color: blue;
+        text-decoration: none;
+      }
+      .calPage a:hover {
+        color: red;
+        text-decoration: none;
+      }
 
-    .date {
-      font-size: 1rem;
-    }
+      .left {
+        float: left;
+        margin: 10px;
+      }
+      .right {
+        float: right;
+        margin: 10px;
+      }
 
-    .calendar .month {
-      color: #222222;
-      font-weight: 800;
-    }
+      .form {
+        margin: auto;
+      }
+      .form input,
+      .form select,
+      .form textarea {
+        border-radius: 5px;
+        border: 1px solid #17a2b8;
+        outline: none;
+        background: none;
+        padding: 5px;
+        width: 100%;
+      }
+    </style>
+  </head>
 
-    .calendar th {
-      padding: 2vw;
-      text-align: center;
-      font-size: 1.5rem;
-    }
-
-    .calendar tr {
-      color: #e66b6b;
-      font-weight: 700;
-      text-transform: uppercase;
-    }
-
-    .calendar td {
-      width: 1rem;
-      height: 4.5em;
-      padding: .25em .25em;
-      transition: background .5s;
-    }
-
-
-    .calendar td:hover {
-      background: #cacaca;
-      color: #fff;
-    }
-
-    .event_line {
-      height: 100%;
-      padding: 0;
-      list-style: none;
-      margin: 0;
-    }
-
-    a {
-      transition: color .2s;
-    }
-
-    span {
-      color: black;
-    }
-
-    a:link {
-      color: blue;
-      text-decoration: none;
-    }
-
-    a:visited {
-      color: blue;
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: red;
-      text-decoration: none;
-    }
-
-    .left {
-      float: left;
-      margin: 10px;
-    }
-
-    .right {
-      float: right;
-      margin: 10px;
-    }
-
-    .form {
-      margin: auto;
-    }
-
-    .form input,
-    .form select,
-    .form textarea {
-      border-radius: 5px;
-      border: 1px solid #17a2b8;
-      outline: none;
-      background: none;
-      padding: 5px;
-      width: 100%;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="calPage">
-    <h1>일정관리</h1>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'new' %}">이벤트 입력</a>
-    </li>
-    <div class="outer">
-      <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"><span>이전 달</span> </a>
-      <a class="btn btn-info right" href="{% url 'calendar' %}?{{ next_month }}"><span>다음 달</span> </a>
+  <body>
+    <div class="calPage">
+      <h1>일정관리</h1>
+      <div class="nav_item">
+        <a class="nav_link" href="{% url 'new' %}">이벤트 입력</a>
+      </div>
+      <div class="outer">
+        <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"><span>이전 달</span> </a>
+        <a class="btn btn-info right" href="{% url 'calendar' %}?{{ next_month }}"><span>다음 달</span> </a>
+      </div>
+      {{calendar}}
     </div>
-    {{calendar}}
-  </div>
-</body>
-
+  </body>
+  
 </html>
 {% endblock %}
