--- a/cal/templates/input.html
+++ b/cal/templates/input.html
@@ -15,6 +15,9 @@
             line-height: 4rem;
             letter-spacing: 0.2rem;
         }
+        .container {
+            min-height: 100vh;
+        }
 
         @font-face {
             font-family: 'BMHANNAPro';
