--- a/human/templates/human.html
+++ b/human/templates/human.html
@@ -1,22 +1,36 @@
-
-{% extends 'base.html' %} 
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 <a href="{% url 'dwrite' %}"> 구인하러가기</a>
 
 <!DOCTYPE html>
 <html>
   <head>
-      
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
     <style>
-      .qnaPage {
+      .humanPage {
         text-align: center;
         min-height: 100vh;
       }
-      .qnaPage h1 {
+      .humanPage h1 {
         font-size: 2.3rem;
         color: rgb(72, 101, 173);
         line-height: 4rem;
@@ -44,7 +58,7 @@
       input:focus {
         outline: none;
       }
-      .qnaPage .search {
+      .humanPage .search {
         font-size: 1.2rem;
         width: 35vw;
         min-width: 300px;
@@ -53,29 +67,28 @@
         border: 1.5px solid gray;
         border-radius: 30px;
       }
-      
     </style>
   </head>
   <body>
-        
-        <br>
-        {% for human in humans.all %}
-        <div class="container">
-        <div class="card">
-            <div class="card-body">
-            <h1> 제목 : {{ human.title }}</h1>
-            <p> 작성일자 : {{ human.pub_date| date:"Y-m-d" }}</p>
-            <p>자세히보기: {{human.body}}</p><a href="{% url 'dpage' human.id %}">자세히보기</a>
-        </div>
-        </div>
-        </div>
-        <br>
-        {% endfor %}
-      
-    </div>
+    <div class="humanPage">
 
+      <br />
+      {% for human in humans.all %}
+      <div class="container">
+        <div class="card">
+          <div class="card-body">
+            <h1>제목 : {{ human.title }}</h1>
+            <p>작성일자 : {{ human.pub_date| date:"Y-m-d" }}</p>
+            <p>자세히보기: {{human.body}}</p>
+            <a href="{% url 'dpage' human.id %}">자세히보기</a>
+          </div>
+        </div>
+      </div>
+      <br />
+      {% endfor %}
+
+    </div>
   </body>
-  
 </html>
-         
+
 {% endblock %}
