글 삭제하기 성공, 다음목표 댓글 삭제

--- a/human/templates/dpage.html
+++ b/human/templates/dpage.html
@@ -60,6 +60,7 @@
 
 <a href="{% url 'human' %}">돌아가기</a>
 <a href="{% url 'dpostupdate' human.id %}"> 수정하러가기</a>
+<a href="{% url 'ddelete' human.id %}">삭제하기</a>
 
 
   </body>
