--- a/RoadmapProject/templates/base.html
+++ b/RoadmapProject/templates/base.html
@@ -99,7 +99,7 @@
           <a href="javascript:{document.getElementById('logout').submit()}"
             >로그아웃</a
           >
-          <form id="logout" method="POST" action="">
+          <form id="logout" method="POST" action="{% url 'logout' %}">
             {% csrf_token %} <input type="hidden" />
           </form>
           {% else %}
