--- a/cal/templates/cal.html
+++ b/cal/templates/cal.html
@@ -121,9 +121,8 @@
 
   <body>
     <div class="calPage">
-      <h1>일정관리</h1>
       <div class="nav_item">
-        <a class="nav_link" href="{% url 'new' %}">이벤트 입력</a>
+        <a class="nav_link" href="{% url 'new' %}">일정 추가</a>
       </div>
       <div class="outer">
         <a class="btn btn-info left" href="{% url 'calendar' %}?{{ prev_month }}"><span>이전 달</span> </a>
