--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,13 +2,13 @@
 {% load bootstrap4 %} 
 {% block content %} 
 <div class="wrapper" style="text-align: center;"> 
-    <h1>Login</h1>
+    <h1>로그인</h1>
 
     <form method="POST" action="{% url 'login'%}">
 	    {%csrf_token%}
-        Username:
+        아이디:
         <input name="username" type="text" value="">
-        Password:
+        비밀번호:
         <input name="password" type="password" value="">
         <input type="submit" class="btn btn-primary" value="Login">
         <br>
