--- a/info/templates/info.html
+++ b/info/templates/info.html
@@ -44,6 +44,46 @@
         border: 1.5px solid gray;
         border-radius: 30px;
       }
+      .info_recruit {
+        display: grid;
+        grid-auto-rows: 200px;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+        row-gap: 2rem;
+        width: 80vw;
+        max-width: 1500px;
+        margin: 0 auto;
+        justify-items: center;
+        margin-top: 4rem;
+        margin-bottom: 4rem;
+      }
+      .info_recruit_item {
+        text-align: left;
+        padding: 1rem 2.5rem;
+        /* width: 40vw; */
+        width: 600px;
+        border: 1px solid rgb(220, 220, 220);
+        border-radius: 30px;
+        box-shadow: 0 0 20px -5px rgba(125, 125, 125, 0.4);
+      }
+      .info_recruit_item:hover {
+        cursor: pointer;
+        box-shadow: 0 0 20px -5px rgba(0, 0, 0, 0.7);
+      }
+      .recruit_corp {
+        font-size: 1.1rem;
+        color:rgb(72, 101, 173);
+        font-weight: bold;
+      }
+      .recruit_tit {
+        font-size: 1.2rem;
+      }
+      .recruit_etc {
+        color: rgb(80, 80, 80);
+      }
+      .recruit_date {
+        color: rgb(218, 19, 19);
+      }
     </style>
   </head>
   <body>
@@ -77,6 +117,24 @@
           <option value="seoul">있을까요우</option>
         </select>
         <input class="search" type="text" placeholder="검색어를 입력하세요" />
+      </div>
+      <div class="info_recruit">
+        {% for recruit in recruits.all %}
+          <div class="info_recruit_item" onclick="window.open('{{recruit.link}}');" target="_blank">
+            <p class="recruit_corp">{{recruit.corp}}</p>
+            <p class="recruit_tit">{{recruit.title}}</p>
+            <p class="recruit_etc">{{recruit.career}} &nbsp;|&nbsp; {{recruit.academic}} &nbsp;|&nbsp; {{recruit.type}} &nbsp;|&nbsp; {{recruit.area}}</p>
+            {% if recruit.end_date %}
+              {% if recruit.end_date == today %}
+              <p class="recruit_date">오늘마감</p>
+              {% else %}
+              <p class="recruit_date">~ {{recruit.end_date.month}}/{{recruit.end_date.day}}</p>
+              {% endif %}
+            {% else %}
+              <p class="recruit_date">{{recruit.end_date_str}}</p>
+            {% endif %}
+          </div>
+        {% endfor %}
       </div>
     </div>
   </body>
